--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,34 @@
+appdirs==1.4.4
+astroid==2.4.2
 certifi==2020.6.20
+cffi==1.14.2
 chardet==3.0.4
 click==7.1.2
+colorama==0.4.3
+cryptography==2.9.2
+distlib==0.3.1
+falcon==2.0.0
+filelock==3.0.12
 Flask==1.1.2
-Flask-JWT-Extended==3.24.1
+Flask-Cors==3.0.9
 Flask-SQLAlchemy==2.4.4
-Flask-WTF==0.14.3
+hug==2.6.1
 idna==2.8
+isort==5.5.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
+jwt==1.0.0
+lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
-PyJWT==1.7.1
+mccabe==0.6.1
+meson==0.55.1
+pycparser==2.20
+pylint==2.6.0
 requests==2.22.0
 six==1.15.0
 SQLAlchemy==1.3.19
+toml==0.10.1
 urllib3==1.25.10
+virtualenv==20.0.31
 Werkzeug==1.0.1
-WTForms==2.3.3
+wrapt==1.12.1
