--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,9 @@ falcon==2.0.0
 filelock==3.0.12
 Flask==1.1.2
 Flask-Cors==3.0.9
+Flask-JWT-Extended==3.24.1
 Flask-SQLAlchemy==2.4.4
+Flask-WTF==0.14.3
 hug==2.6.1
 idna==2.8
 isort==5.5.1
@@ -23,6 +25,7 @@ MarkupSafe==1.1.1
 mccabe==0.6.1
 meson==0.55.1
 pycparser==2.20
+PyJWT==1.7.1
 pylint==2.6.0
 requests==2.22.0
 six==1.15.0
@@ -32,3 +35,4 @@ urllib3==1.25.10
 virtualenv==20.0.31
 Werkzeug==1.0.1
 wrapt==1.12.1
+WTForms==2.3.3
