--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,15 @@ chardet==3.0.4
 click==7.1.2
 colorama==0.4.3
 cryptography==2.9.2
+Cython==0.29.21
 distlib==0.3.1
 falcon==2.0.0
 filelock==3.0.12
 Flask==1.1.2
 Flask-Cors==3.0.9
+Flask-Ext==0.1
 Flask-JWT-Extended==3.24.1
+Flask-Login==0.5.0
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
 hug==2.6.1
@@ -24,10 +27,13 @@ lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
 meson==0.55.1
+numpy==1.19.2
+POT==0.7.0
 pycparser==2.20
 PyJWT==1.7.1
 pylint==2.6.0
 requests==2.22.0
+scipy==1.5.2
 six==1.15.0
 SQLAlchemy==1.3.19
 toml==0.10.1
